# rollup-core

./: .env.example  .gitignore  ARCHITECTURE.md  COMPLETION_SUMMARY.md  DATABASE_SCHEMA.md  DEVELOPMENT_GUIDE.md  FEATURE_ROADMAP.md  README.md  TODO.md  main.py  pyproject.toml  readme.md  render.yaml  requirements.txt  test_lobby_api.py  test_mock_db.py
.claude/worktrees/frosty-saha/: .gitignore  COMPLETION_SUMMARY.md  GAME_RECOMMENDATIONS.md  LOBBY_API_GUIDE.md  MOCK_DB_GUIDE.md  TODO.md  readme.md  test_jwt_setup.py
.claude/worktrees/frosty-saha/core/: firebase_admin_app.py
.claude/worktrees/frosty-saha/docs/: FEATURES_ROADMAP.md
.claude/worktrees/frosty-saha/games/: README.md
.claude/worktrees/frosty-saha/routes/: README.md  game.py  shop.py
.claude/worktrees/frosty-saha/test/: supabase_connection_test_.py
app/: __init__.py  config.py  deps.py  main.py
app/api/: games.py  health.py
app/core/: auth.py  exceptions.py  rng.py  shuffle.py  supabase_client.py
app/games/: base.py  registry.py
app/schemas/: action.py  auth.py  game.py
app/services/: game_service.py  room_service.py
core/: README.md
core/database/: firestore.py  supabase.py
core/services/: lobby_service.py
docs/: GAME_RECOMMENDATIONS.md  README.md  STRUCTURE.md  api-spec.md  plan.md
docs/games/: README.md  lexio.md  splendor-duel.md  splendor-pokemon.md  splendor.md  yacht.md
games/: __init__.py  base.py
games/gomoku/: rules.py
routes/: auth.py  lobby.py  plugins.py
scripts/: init_schema.sql
tests/: test_core.py  test_health.py
(+6 files in other folders)
